--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,7 +1,7 @@
 name: CI-Polaris 
 on:
   push:
-    branches: [ master, develop, stage ]
+    branches: [ main, master, develop, stage ]
   pull_request:
     branches: [ polaris ]
   workflow_dispatch:
