--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
-      - name: Coverity Scan
+      - name: Polaris Scan
         uses: blackduck-inc/black-duck-security-scan@main
         with:
           ### SCANNING: Required fields
