new project polaris

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -23,10 +23,10 @@ jobs:
           include_diagnostics: true
           polaris_assessment_types: "SAST,SCA"
           polaris_prComment_enabled: true
-          polaris_assessment_mode: "SOURCE_UPLOAD"
-          polaris_waitForScan: false
+          #polaris_assessment_mode: "SOURCE_UPLOAD"
+          #polaris_waitForScan: false
           
-          project_source_archive: "/Users/kirann/bridge-cli-bundle/bridge-cli-bundle-macos_arm/OWASP-NodeGoat-master.zip" # Path to the source code archive file to be scanned.
+         # project_source_archive: "/Users/kirann/bridge-cli-bundle/bridge-cli-bundle-macos_arm/OWASP-NodeGoat-master.zip" # Path to the source code archive file to be scanned.
           ### Coverity Connect users - Uncomment below
           # coverity_local: true
           ### Uncomment below configuration if Synopsys Bridge diagnostic files needs to be uploaded
