new project polaris

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main, master, develop, stage ]
   pull_request:
-    branches: [ polaris ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
