--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -20,7 +20,7 @@ jobs:
           #bridgecli_download_version: 3.4.25
           polaris_server_url: ${{ vars.POLARIS_SERVER_URL }}
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
-          include_diagnostics: true
+          #include_diagnostics: true
           polaris_assessment_types: "SAST,SCA"
           #polaris_prComment_enabled: true
           #polaris_assessment_mode: "SOURCE_UPLOAD"
